# c-sdk

./: CMakeLists.txt
demo/: CMakeLists.txt  put_file_abortable.c
qiniu/: base.h  base_io.c  cdn.c  cdn.h  conf.c  http.c  http.h  io.c  io.h  qetag.c  qetag.h  region.c  region.h  resumable_io.c  resumable_io.h  rs.c  rs.h  tm.c  tm.h
windows/: emu_posix.c  emu_posix.h
